@@ -4,6 +4,9 @@
 
 
  Changes between 0.9.1c and 0.9.2
+  
+  *) New program nseq to manipulate netscape certificate sequences
+     [Steve Henson]
 
   *) Modify crl2pkcs7 so it supports multiple -certfile arguments. Fix a
      few typos.
@@ -13,6 +16,9 @@
      but the BN code had some problems that would cause failures when
      doing certificate verification and some other functions.
      [Eric A. Young, (from changes to C2Net SSLeay, integrated by Mark Cox)]
+
+  *) Add ASN1 and PEM code to support netscape certificate sequences.
+     [Steve Henson]
 
   *) Add ASN1 and PEM code to support netscape certificate sequences.
      [Steve Henson]
